# e-commerce-FastAPI

./: .coverage  README.md  main.py  pyproject.toml
src/: main.py
